--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,9 +1,20 @@
-<%= form_for @song  do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %><br>
-  <%= f.label :artist_name %>
-  <%= f.text_field :artist_name %>
-  <br />
+<%= form_for(@song) do |f| %>
+  <label>Song title:</label><br>
+  <% if @song.artist.nil? %>
+    <%= f.select :artist_id, options_from_collection_for_select(Artist.all, :id, :name) %><br>
+  <% end %>
+ <%= f.hidden_field :artist_id %>
+
+
+ <%= artist_id_field(@song) %><br>
+ <label>Song title:</label><br>
+ <%= f.text_field :title %><br>
+ <%= f.label :artist_name %>
+ <%= f.text_field :artist_name %><br />
 
   <%= f.submit %>
+
 <% end %>
+
+
+
